--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
     "eslint-config-google": "^0.9.1",
     "redux-devtools": "^3.4.1"
   },
-  "homepage" : "http://anna-kiranova.github.io/todo"
+  "homepage" : "http://anna-kiranova.github.io/todo-list-app"
 }
